; ModuleID = '/home/carl/AnghaBench/h2o/lib/handler/status/extr_ssl.c_ssl_status_per_thread.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/handler/status/extr_ssl.c_ssl_status_per_thread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i64, i64, i64, i64, i64, i64 }
%struct.st_ssl_status_ctx_t = type { i32, i32, i32, i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, %struct.TYPE_5__*)* @ssl_status_per_thread to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ssl_status_per_thread(i8* %0, %struct.TYPE_5__* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca %struct.st_ssl_status_ctx_t*, align 8
  store i8* %0, i8** %3, align 8
  store %struct.TYPE_5__* %1, %struct.TYPE_5__** %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.st_ssl_status_ctx_t*
  store %struct.st_ssl_status_ctx_t* %7, %struct.st_ssl_status_ctx_t** %5, align 8
  %8 = load %struct.st_ssl_status_ctx_t*, %struct.st_ssl_status_ctx_t** %5, align 8
  %9 = getelementptr inbounds %struct.st_ssl_status_ctx_t, %struct.st_ssl_status_ctx_t* %8, i32 0, i32 0
  %10 = call i32 @pthread_mutex_lock(i32* %9)
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 5
  %14 = load i64, i64* %13, align 8
  %15 = load %struct.st_ssl_status_ctx_t*, %struct.st_ssl_status_ctx_t** %5, align 8
  %16 = getelementptr inbounds %struct.st_ssl_status_ctx_t, %struct.st_ssl_status_ctx_t* %15, i32 0, i32 6
  %17 = load i32, i32* %16, align 4
  %18 = sext i32 %17 to i64
  %19 = add nsw i64 %18, %14
  %20 = trunc i64 %19 to i32
  store i32 %20, i32* %16, align 4
  %21 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %22 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %21, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 4
  %24 = load i64, i64* %23, align 8
  %25 = load %struct.st_ssl_status_ctx_t*, %struct.st_ssl_status_ctx_t** %5, align 8
  %26 = getelementptr inbounds %struct.st_ssl_status_ctx_t, %struct.st_ssl_status_ctx_t* %25, i32 0, i32 5
  %27 = load i32, i32* %26, align 4
  %28 = sext i32 %27 to i64
  %29 = add nsw i64 %28, %24
  %30 = trunc i64 %29 to i32
  store i32 %30, i32* %26, align 4
  %31 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %32 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %31, i32 0, i32 0
  %33 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %32, i32 0, i32 3
  %34 = load i64, i64* %33, align 8
  %35 = load %struct.st_ssl_status_ctx_t*, %struct.st_ssl_status_ctx_t** %5, align 8
  %36 = getelementptr inbounds %struct.st_ssl_status_ctx_t, %struct.st_ssl_status_ctx_t* %35, i32 0, i32 4
  %37 = load i32, i32* %36, align 4
  %38 = sext i32 %37 to i64
  %39 = add nsw i64 %38, %34
  %40 = trunc i64 %39 to i32
  store i32 %40, i32* %36, align 4
  %41 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %42 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %41, i32 0, i32 0
  %43 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %42, i32 0, i32 2
  %44 = load i64, i64* %43, align 8
  %45 = load %struct.st_ssl_status_ctx_t*, %struct.st_ssl_status_ctx_t** %5, align 8
  %46 = getelementptr inbounds %struct.st_ssl_status_ctx_t, %struct.st_ssl_status_ctx_t* %45, i32 0, i32 3
  %47 = load i32, i32* %46, align 4
  %48 = sext i32 %47 to i64
  %49 = add nsw i64 %48, %44
  %50 = trunc i64 %49 to i32
  store i32 %50, i32* %46, align 4
  %51 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %52 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %51, i32 0, i32 0
  %53 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %52, i32 0, i32 1
  %54 = load i64, i64* %53, align 8
  %55 = load %struct.st_ssl_status_ctx_t*, %struct.st_ssl_status_ctx_t** %5, align 8
  %56 = getelementptr inbounds %struct.st_ssl_status_ctx_t, %struct.st_ssl_status_ctx_t* %55, i32 0, i32 2
  %57 = load i32, i32* %56, align 4
  %58 = sext i32 %57 to i64
  %59 = add nsw i64 %58, %54
  %60 = trunc i64 %59 to i32
  store i32 %60, i32* %56, align 4
  %61 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %62 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %61, i32 0, i32 0
  %63 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %62, i32 0, i32 0
  %64 = load i64, i64* %63, align 8
  %65 = load %struct.st_ssl_status_ctx_t*, %struct.st_ssl_status_ctx_t** %5, align 8
  %66 = getelementptr inbounds %struct.st_ssl_status_ctx_t, %struct.st_ssl_status_ctx_t* %65, i32 0, i32 1
  %67 = load i32, i32* %66, align 4
  %68 = sext i32 %67 to i64
  %69 = add nsw i64 %68, %64
  %70 = trunc i64 %69 to i32
  store i32 %70, i32* %66, align 4
  %71 = load %struct.st_ssl_status_ctx_t*, %struct.st_ssl_status_ctx_t** %5, align 8
  %72 = getelementptr inbounds %struct.st_ssl_status_ctx_t, %struct.st_ssl_status_ctx_t* %71, i32 0, i32 0
  %73 = call i32 @pthread_mutex_unlock(i32* %72)
  ret void
}

declare dso_local i32 @pthread_mutex_lock(i32*) #1

declare dso_local i32 @pthread_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
